test_programs/compile_failure/noirc_frontend_tests_bool_numeric_generic/src/main.nr

    pub fn read<let N: bool>() -> Field {
        if N {
            0
        } else {
            1
        }
    }
    